RESOLVED FIXED171330
[JSC] fix RETURN_IF_EXCEPTION() placement in ownPropertyKeys()
https://bugs.webkit.org/show_bug.cgi?id=171330
Summary [JSC] fix RETURN_IF_EXCEPTION() placement in ownPropertyKeys()
Caitlin Potter (:caitp)
Reported 2017-04-26 09:41:02 PDT
[JSC] fix RETURN_IF_EXCEPTION() placement in ownPropertyKeys()
Attachments
Patch (3.67 KB, patch)
2017-04-26 09:41 PDT, Caitlin Potter (:caitp)
no flags
Patch for landing (3.66 KB, patch)
2017-04-26 10:00 PDT, Caitlin Potter (:caitp)
no flags
Caitlin Potter (:caitp)
Comment 1 2017-04-26 09:41:58 PDT
Mark Lam
Comment 2 2017-04-26 09:56:27 PDT
Comment on attachment 308259 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=308259&action=review r=me > Source/JavaScriptCore/ChangeLog:8 > + nit: please remove this extra blank line.
Caitlin Potter (:caitp)
Comment 3 2017-04-26 10:00:36 PDT
Created attachment 308262 [details] Patch for landing
WebKit Commit Bot
Comment 4 2017-04-26 10:41:21 PDT
Comment on attachment 308262 [details] Patch for landing Clearing flags on attachment: 308262 Committed r215810: <http://trac.webkit.org/changeset/215810>
WebKit Commit Bot
Comment 5 2017-04-26 10:41:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.