[JSC] fix RETURN_IF_EXCEPTION() placement in ownPropertyKeys() https://bugs.webkit.org/show_bug.cgi?id=171330

Reviewed by Mark Lam.

Ensure RETURN_IF_EXCEPTION() following invokation of the
filterPropertyIfNeeded() lambda.

* runtime/ObjectConstructor.cpp:
(JSC::ownPropertyKeys):


Canonical link: https://commits.webkit.org/188212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215810 268f45cc-cd09-0410-ab3c-d52691b4dbfc